--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,11 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:               Split Learning Project: MIT Media Lab
+tagline:             'Split Learning Project: MIT Media Lab'
+description:         'Split Learning Project: MIT Media Lab'
 url:                 http://lanyon.getpoole.com
 baseurl:             ''
 paginate:            5
 permalink:           pretty
-
-# About/contact
-author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
 
 # Gems
 plugins:
