[update] _config.yml - 2

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:               Split Learning Project: MIT Media Lab
 tagline:             'Split Learning Project: MIT Media Lab'
 description:         'Split Learning Project: MIT Media Lab'
-url:                 http://lanyon.getpoole.com
+url:                 https://splitlearning.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
