--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:               Split Learning Project: MIT Media Lab
+title:               'Split Learning Project: MIT Media Lab'
 tagline:             'Split Learning Project: MIT Media Lab'
 description:         'Split Learning Project: MIT Media Lab'
 url:                 https://splitlearning.github.io
